<resources>
    <string name="app_name">Suffix AuthX</string>

    <string name="lbl_sign_in_with_phone">Sign in with Phone</string>
    <string name="lbl_sign_in_option">Secure your digital world effortlessly.</string>

    <string name="btn_login">Log In</string>
    <string name="lbl_login"><u>Log In</u></string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="btn_forgot_password"><u>Forgot Password?</u></string>
    <string name="btn_register"><u>Click Here</u></string>
    <string name="err_empty_email">• Email is required</string>
    <string name="err_invalid_email">• That doesn\'t appear to be a valid email address</string>
    <string name="err_invalid_username">• That doesn\'t look like a valid email address</string>
    <string name="err_empty_password">• Password is required</string>
    <string name="err_empty_new_password">• New Password is required</string>
    <string name="lbl_firstname">Full Name</string>
    <string name="lbl_lastname">Last Name</string>
    <string name="lbl_phone">Phone</string>
    <string name="btn_signup">Register</string>
    <string name="lbl_verify_password">Verify Password</string>
    <string name="user_deleted_message">User successfully deleted.</string>
    <!--Keywords-->
    <string name="sensitive_keyword">sensitive</string>
    <string name="reauthentication_required_message">You need to reauthenticate before deleting the user.</string>

    <string name="sign_out_action_label">Sign out?</string>

    <string name="err_empty_firstname">• First name is required</string>
    <string name="err_empty_lastname">• Last name is required</string>
    <string name="err_empty_phone">• Phone number is required</string>
    <string name="err_invalid_phone">• Phone number is invalid</string>

    <string name="err_offensive_words_not_permitted">• Offensive words are not permitted</string>
    <string name="err_only_128_characters_allowed">• Only 128 characters are allowed</string>

    <string name="err_password_pattern_invalid">• Password must contain at least one uppercase letter, lowercase letter, number, special character and be between 8 to 32 characters long</string>
    <string name="err_empty_verify_password">• Password verification is required</string>
    <string name="err_password_not_matched">• Password and Confirm Password doesn\'t match</string>
    <string name="err_new_password_not_matched">• New Password and Confirm Password doesn\'t match</string>
    <string name="account_created_message">Your account has been successfully created.</string>
    <string name="email_verification_sent_message">We\'ve sent you an email with a link to verify the email.</string>
    <string name="verify_email_screen_title">Verify email</string>
    <string name="already_verified"><u>Already verified?</u></string>
    <string name="spam_email">If not, please also check the spam folder.</string>
    <string name="email_not_verified_message">Your email is not verified. Please click the link in the email.</string>
    <string name="reset_password_message">We\'ve sent you an email with a link to reset the password.</string>"

    <string name="default_web_client_id">776521156581-utb63hi3s4cj50kej8ngvg073aal69qe.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1609442172930055</string>

    <!--<string name="facebook_app_id">1234</string>-->
    <string name="fb_login_protocol_scheme">fb1609442172930055</string>
    <string name="facebook_client_token">2faf7bf68306a593072a7558123023b6</string>

    <string name="twitter_consumer_key">exWbVvtL6qEOrCSJoICbDvitF</string>
    <string name="twitter_consumer_secret">sQkRcYnBZDi3ln5WBnUjEwXdgM7GQarWNxgVzrmKNCo8yfmH6G</string>
    <string name="lbl_email_password_login">Email - Password Login</string>
    <string name="lbl_sign_in_with_google">Google</string>
    <string name="lbl_sign_in_with_facebook">Facebook</string>
    <string name="lbl_sign_in_with_twitter">Twitter</string>
    <string name="lbl_sign_in_with_github">Github</string>
    <string name="lbl_sign_in_with_yahoo">Sign in with Yahoo</string>
    <string name="lbl_sign_in_with_microsoft">Sign in with Microsoft</string>
    <string name="lbl_sign_in_with_anonymous">Sign in with Anonymous</string>
    <string name="lbl_otp_send_instruction">We sent a code to your mobile number</string>
    <string name="btn_send">SEND</string>
    <string name="lbl_logged_out_successfully">Logged out successfully</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_welcome_user">Welcome, %1$s</string>
    <string name="back">Back</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="_91">+91</string>
    <string name="lbl_send">Send</string>


</resources>