<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/_25sdp"
        android:paddingEnd="@dimen/_25sdp"
        tools:context=".ui.MainActivity">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleX="2.5"
            android:scaleY="2.5"
            android:src="@mipmap/suffix_digital_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_weight="1"
            android:fadeScrollbars="true"
            android:paddingStart="1dp"
            android:paddingEnd="@dimen/_5sdp"
            android:scrollIndicators="right"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="@dimen/_3sdp"
            android:scrollbarStyle="outsideInset"
            android:scrollbarThumbVertical="@color/fui_bgGitHub"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Sign in with Phone -->
                <LinearLayout
                    android:id="@+id/btn_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_google_button"

                    android:backgroundTint="@color/fui_bgPhone"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_phone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_sign_in_with_phone"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <!-- Email-Password Login -->
                <LinearLayout
                    android:id="@+id/btn_email_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_google_button"
                    android:backgroundTint="@color/fui_bgEmail"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_mail_white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_email_password_login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <!-- Sign in with Google -->
                <LinearLayout
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_google_button"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_google" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_sign_in_with_google"
                        android:textColor="#000000"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <!-- Sign in with Facebook -->
                <LinearLayout
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_google_button"
                    android:backgroundTint="@color/fui_bgFacebook"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_facebook" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_sign_in_with_facebook"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>


                <!-- Twitter Login -->
                <LinearLayout
                    android:id="@+id/btn_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_google_button"
                    android:backgroundTint="@color/fui_bgTwitter"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_twitter_bird" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_sign_in_with_twitter"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <!-- Github Login -->
                <LinearLayout
                    android:id="@+id/btn_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_google_button"
                    android:backgroundTint="@color/fui_bgGitHub"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_github_white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_sign_in_with_github"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <!-- Yahoo Login -->
                <LinearLayout
                    android:id="@+id/btn_yahoo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_google_button"
                    android:backgroundTint="@color/fui_bgYahoo"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_yahoo" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_yahoo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_sign_in_with_yahoo"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <!-- Microsoft Login -->
                <LinearLayout
                    android:id="@+id/btn_microsoft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_google_button"
                    android:backgroundTint="@color/fui_bgMicrosoft"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_microsoft" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_microsoft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_sign_in_with_microsoft"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <!-- Anonymous Login -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_google_button"
                    android:backgroundTint="@color/fui_bgAnonymous"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_12sdp"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_anonymous" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/lbl_sign_in_with_anonymous"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</layout>