<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient"
            android:overScrollMode="never"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_110sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@android:color/transparent"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:src="@drawable/suffix_authx_icon" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:backgroundTint="#000b3f"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="@color/white"
                    app:strokeWidth="@dimen/_1sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_20sdp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/dm_sans_bold"
                            android:text="@string/lbl_phone_number"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_25ssp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/dm_sans_regular"
                            android:gravity="center"
                            android:text="@string/lbl_otp_send_instruction"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11ssp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.2"
                                android:background="@drawable/border_left"
                                android:gravity="center"
                                android:padding="@dimen/_10sdp"
                                android:text="@string/_91"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/_15ssp" />

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/etPhone"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_weight="4"
                                android:background="@drawable/border_right"
                                android:ems="10"
                                android:imeOptions="actionDone"
                                android:hint="@string/lbl_phone_number"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:padding="@dimen/_10sdp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/_15ssp" />
                        </LinearLayout>


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnSend"
                            android:layout_width="@dimen/_160sdp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_30sdp"
                            android:background="@drawable/btn_primary"
                            android:fontFamily="sans-serif-medium"
                            android:imeOptions="actionDone"
                            android:text="@string/lbl_send"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp" />


                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/loading_process"
            layout="@layout/circular_progressbar_layout" />

    </FrameLayout>

</layout>
